inputmethod: Only align within availableGeometry if it fits

An input panel in Overlay mode controls it's own size.

If there's space we want to fit it centre aligned within the available
space, but if it doesn't fit (i.e having a left panel and a full width
keyboard) then centre aligning within the available space doesn't make
sense. We would half overlap the panel and half go offscreen. This patch
adjusts us to centre align to the output in that condition.

BUG: 440571